--- a/Latitude_Longitude_Extraction.ipynb
+++ b/Latitude_Longitude_Extraction.ipynb
@@ -23,7 +23,7 @@
     "#import folium\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(r'E:\\OneDrive\\OneDrive - University of Nebraska-Lincoln\\Fall20233\\Math 435\\Fall2023_Address_Only.csv')\n",
+    "df = pd.read_csv(r'E:\\Fall2023_Address_Only.csv')\n",
     "\n",
     "BASE_URL = \"https://nominatim.openstreetmap.org/search?format=json\"\n",
     "\n",
